--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "devDependencies": {
     "postcss": "^8",
-    "prisma": "^6.1.0",
+    "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
