--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@prisma/client": "^6.4.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "postcss": "^8",
